--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
           <a class="navbar-brand pr-lg-5" href="index.html">
-            <img src="assets/images/logo.png" alt="" class="img-fluid">Kannan Consultant
+            <img src="assets/images/logo.png" alt="" class="img-fluid">Visuwasam Consultant
           </a>
           <!-- if logo is image enable this   
             <a class="navbar-brand" href="#index.html">
